add_library(c2_newcommon STATIC
    00-car.c
    01-network.c
    02-init.c
    02b-init.c
    03-racestrt.c
    04-netgame.c
    05-drmem.c
    06-apo.c
    07-structur.c
    08-loading1.c
    09-funks.c
    10-loading2.c
    11-world1.c
    12-menuoptions.c
    13-crush1.c
    14-drfile.c
    15-displays.c
    16-graphics1.c
    17-world2.c
    18-graphics2.c
    19-font.c
    20-skidmark.c
    21-mainloop.c
    22-replay.c
    23-piping.c
    24-loadsave.c
    25-grafdata.c
    26-oppoproc.c
    27-powerup.c
    28-world3.c
    29-raycast.c
    30-opponent.c
    31-racesumm.c
    32-spark.c
    33-depth.c
    34-finteray.c
    35-intrface.c
    36-trig.c
    37-brucetrk.c
    38-flicplay.c
    39-oil.c
    40-main.c
    41-utility.c
    42-input.c
    43-pratcam.c
    44-mainmenu.c
    45-cutscene.c
    46-win95sys.c
    47-win95net.c
    48-radhelp.c
    49-physics.c
    50-fog.c
    51-smash.c
    52-errors.c
    53-controls.c
    54-runtime.c
    55-volume.c
    56-aiworld.c
    57-drone.c
    58-crush2.c
    59-camera.c
    60-phil.c
    61-pedestrn.c
    62-graphics3.c
    63-loading3.c
    64-movie.c
    65-hull.c
    66-tintedpoly.c
    67-lighting.c
    68-timer.c
    69-sound.c
    70-packfile.c
    71-newgame.c
    72-interface.c

    loadtif.c
    loadtif_zlib.c

    globvars.c
    globvrbm.c
    globvrkm.c
    globvrme.c
    globvrpb.c
    joystick.c
)

target_include_directories(c2_newcommon
    PUBLIC
        "$<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}>"
)
target_link_libraries(c2_newcommon
    PUBLIC
        rec2_headers
        BRender::Headers
        c2_hooks
        c2_platform
        S3::S3
        TIFF::TIFF
        ZLIB::ZLIB
        QuickTime::Dummy
        Smackw32::Smackw32
)

if(NOT MSVC)
    add_compile_options(-Wredundant-decls)
endif()

if(MSVC AND NOT REC2_MATCHING)
    add_compile_definitions(-D_CRT_NONSTDC_NO_DEPRECATE)
endif()
